# rpa-landuse

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .secrets.baseline  404.html  ABOUT.md  AUTHENTICATION_SETUP.md  CLAUDE.md  DATA_REDUCTION_INSTRUCTIONS.md  LANGGRAPH_MIGRATION.md  LANGGRAPH_MIGRATION_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_TO_SECURE.md  PR55_FINAL_TEST_RECOMMENDATIONS.md  PROJECT_OVERVIEW.md  PR_104_REVIEW.md  QUERY_LIMITS_ANALYSIS.md  QUERY_LIMITS_CHANGES.md  QUICK_START.md  RATE_LIMIT_FIX.md  README.md  REFACTORING_PLAN.md  REFACTORING_README.md  RESTRUCTURE_SUMMARY.md  STREAMLIT_DASHBOARD.md  URBANIZATION_EXPORT_ENHANCEMENTS.md  UX_IMPROVEMENTS_SUMMARY.md  app_minimal.py  aws-cookbook.txt  bandit-report.json  check_openai_limits.py  complete_organization.py  dark_mode_test_coverage_analysis.md  debug_app.py  debug_rate_limit.py  debug_texas_query.py  dependency_analysis.md  diagnostic.py  index.html  (+38 more)
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  documentation.yml  performance.yml  release.yml  security.yml
.kiro/hooks/: docs-sync-hook.kiro.hook  git-workflow-agent.md  git-workflow-review.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
.organization_backup_20250621_064719/: .gitignore  inventory.json  sample_data.csv
.streamlit/: config.toml  secrets.toml.example
AGENT_CONSOLIDATION/: index.html
CLAUDE.local/: index.html
GITHUB_PAGES_SETUP/: index.html
KNOWLEDGE_BASE_INTEGRATION/: index.html
LAND_USE_METHODOLOGY/: index.html
RPA_SCENARIOS/: index.html
SECURITY/: index.html
TESTING/: index.html
agents/ADVANCED_CONFIGURATION/: index.html
agents/CONSTANTS_ARCHITECTURE/: index.html
agents/ERROR_HANDLING_RESILIENCE/: index.html
agents/INTEGRATION_EXTENSION/: index.html
agents/MEMORY_STATE_MANAGEMENT/: index.html
agents/PERFORMANCE_MONITORING/: index.html
agents/SYSTEM_PROMPT_ARCHITECTURE/: index.html
agents/TOOL_SYSTEM_ARCHITECTURE/: index.html
agents/complete-guide/: index.html
agents/overview/: index.html
api/agent/: index.html
api/converters/: index.html
api/landuse-query-agent/: index.html
api/langgraph-agent/: index.html
api/tools/: index.html
archive/: README.md
archive/implementation-notes/: SCENARIO_QUERY_ISSUE_ANALYSIS.md
assets/branding/: ascii_logo.txt  ascii_logo_simple.txt
config/: requirements.txt
data/: README.md  inventory.json  sample_data.csv
data/categories/: index.html
data/chroma_db/: chroma.sqlite3
data/complete-reference/: index.html
data/data-dictionary/: index.html
data/database-overview/: index.html
data/duckdb-schema/: index.html
data/processed/: landuse_analytics.duckdb
data/processing/: index.html
data/rpa-model-diagram/: index.html
data/samples/: sensor_data.parquet
data/schema/: index.html
data/sources/: index.html
data/table-reference/: index.html
data/technical-specifications/: index.html
data/variable-descriptions/: index.html
data/view-definitions/: index.html
deploy/dev/: README.md
development/BRANDING_STRATEGY/: index.html
development/architecture/: index.html
development/branding-strategy/: index.html
development/ci-cd-pipeline/: index.html
development/contributing/: index.html
development/duckdb-optimization/: index.html
development/modern-duckdb-tools/: index.html
development/pydantic-models/: index.html
development/retry-logic/: index.html
development/security-policy/: index.html
development/streamlit-fragments/: index.html
development/testing/: index.html
development/testing-guide/: index.html
development/testing-implementation/: index.html
docker/dev/: .dockerignore  README.md  docker-compose.yml  dockerfile.terraform.yml  dockerfile.yml
docker/prod/: .dockerignore  docker-compose.yml  dockerfile.yml
docs/: AGENT_CONSOLIDATION.md  CLAUDE.local.md  DATABASE_SCHEMA.md  GITHUB_PAGES_SETUP.md  KNOWLEDGE_BASE_INTEGRATION.md  LAND_USE_METHODOLOGY.md  LANGGRAPH_MIGRATION_README.md  README.md  RPA_SCENARIOS.md  SCHEMA_MANAGEMENT_ARCHITECTURE.md  SCHEMA_VERSIONING.md  SECURITY.md  TESTING.md  faq.md  index.md  mkdocs_structure_report.md  rpa_colors.txt  troubleshooting.md
docs/agents/: ADVANCED_CONFIGURATION.md  CONSTANTS_ARCHITECTURE.md  ERROR_HANDLING_RESILIENCE.md  INTEGRATION_EXTENSION.md  MEMORY_STATE_MANAGEMENT.md  PERFORMANCE_MONITORING.md  README.md  SYSTEM_PROMPT_ARCHITECTURE.md  complete-guide.md  (+2 more)
examples/: constants_usage_example.py
faq/: index.html
mkdocs_structure_report/: index.html
pages/: analytics.py  chat.py  explorer.py  extraction.py  maps.py  settings.py
pages_disabled/: extraction.py
prompts/: CHANGELOG.md  prompt_manager.py  test_prompt.py
rpa-landuse-github/: .gitignore  README.md  requirements-streamlit.txt  streamlit_app.py
schema/: README.md
scripts/: __init__.py  cleanup_test_artifacts.py  compare_agents.py  consolidate_agents.py  create_baseline_land_stock.sql  create_spatial_views.py  create_spatial_views.sql  create_views_simple.py  data_processor_duckdb.py  deploy_docs.py  fix_agent_schema.py  fix_state_names.py  github_export.sh  migrate_to_enhanced_geography.py  migrate_to_langgraph.py  quick_agent_demo.py  rename_geography_table.py  serve_docs.py  simple_benchmark.py  simple_rename_geography.py  simplify_database_complete.py  simplify_geography_table.py  test_consolidated_agent.py  test_langgraph_basic.py  test_map_agent.py  test_prompt_modes_info.py  update_code_references.py  update_code_simple.py  update_code_to_enhanced.py  update_streamlit_for_views.py  verify_mkdocs_files.py  verify_mkdocs_files_simple.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: conftest.py  test_landuse_data.py  test_prompt_manager.py  test_schema_version.py  test_schema_version_comprehensive.py  test_schema_version_edge_case_recommendations.py
troubleshooting/: index.html
views/: analytics.py  chat.py  explorer.py  extraction.py  maps.py  settings.py
(+349 files in other folders)
